// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StackedBarChart /> > CumulativeWithSelectionDimBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Domain
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-btb3c9-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ywj5j8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-tzp59l-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-4cacjg-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1rchfp-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1iww2tj-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-ctv9i2-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-8335v5-BarSegment eja2e931"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-1pj9zxh-LegendItem ezuih623"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-1ac6ekt-LegendIcon ezuih622"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Select All
        </span>
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-s054fq-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> > CumulativeWithSelectionHideBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Domain
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-btb3c9-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1ywj5j8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-tzp59l-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-4cacjg-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1rchfp-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1iww2tj-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-ctv9i2-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-8335v5-BarSegment eja2e931"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-1pj9zxh-LegendItem ezuih623"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-1ac6ekt-LegendIcon ezuih622"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Select All
        </span>
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-s054fq-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> > Default story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Domain
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-1wotr3k-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-vbkci8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1cpzd83-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1uxqjxw-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-mbfdat-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p794w-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-bjqmlx-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StackedBarChart /> > ProportionalWithSelectionDimBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Domain
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-1wotr3k-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-vbkci8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1cpzd83-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1uxqjxw-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-mbfdat-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p794w-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-bjqmlx-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Select All
        </span>
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-s054fq-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> > ProportionalWithSelectionHideBehavior story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Domain
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-1wotr3k-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-vbkci8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1cpzd83-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1uxqjxw-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-mbfdat-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p794w-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-bjqmlx-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary et5j5k2 css-1y6q75o-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Select All
        </span>
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary et5j5k2 css-s054fq-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="css-1t5yxjj-StyledChildren-StyledChildren et5j5k1"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> > WithMouseEvents story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-s9qr8q-ChartWrapper eja2e936"
    width="360px"
  >
    <div
      class="css-1iwd80f-TitleContainer eja2e935"
    >
      <div
        class="css-1xupeuz-ChartTitle eja2e934"
      >
        Mouse Events Demo
      </div>
      <div
        class="css-ayagvq-StyledBadge eja2e933"
      >
        7
      </div>
    </div>
    <div
      class="css-11m8tw9-StyledStackedBarChartWrapper eja2e930"
    >
      <div
        class="css-oxlhx3-BarContainer eja2e932"
        width="360px"
      >
        <div
          class="css-1wotr3k-BarSegment eja2e931"
          color="#615da2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-vbkci8-BarSegment eja2e931"
          color="#a45894"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1cpzd83-BarSegment eja2e931"
          color="#b96a6c"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1uxqjxw-BarSegment eja2e931"
          color="#a98954"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-mbfdat-BarSegment eja2e931"
          color="#90a45a"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p794w-BarSegment eja2e931"
          color="#7ab978"
          data-hide="false"
          height="16"
          opacity="1"
        />
        <div
          class="css-bjqmlx-BarSegment eja2e931"
          color="#8ac2d2"
          data-hide="false"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1bg97cd-LegendContainer ezuih624"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1lt1ult-LegendIcon ezuih622"
            color="#615da2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Transcriptomic
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-stei2d-LegendIcon ezuih622"
            color="#a45894"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Imaging
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1jtqp1l-LegendIcon ezuih622"
            color="#b96a6c"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Sequencing
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1zjqim-LegendIcon ezuih622"
            color="#a98954"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Proteomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1f7br7j-LegendIcon ezuih622"
            color="#90a45a"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-zcm6lm-LegendIcon ezuih622"
            color="#7ab978"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Prosthetics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-n3ggxj-LegendItem ezuih623"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1u7iiun-LegendIcon ezuih622"
            color="#8ac2d2"
          />
          <span
            class="css-1yxv6ch-LegendLabel ezuih621"
          >
            Epigenomics
          </span>
          <span
            class="css-o3szpf-LegendValue ezuih620"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px; display: flex; gap: 16px; flex-grow: 1; align-items: flex-start;"
  >
    <div
      style="padding: 16px; border-radius: 8px; margin-bottom: 16px;"
    >
      <h3
        style="margin: 0px 0px 12px; font-size: 14px;"
      >
        Current Hover State (Hover over a bar segment or legend item):
      </h3>
      <div>
        <div>
          <strong>
            Name:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Value:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Index:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Source:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Custom Color:
          </strong>
           
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      style="padding: 16px; border-radius: 8px; max-height: 400px; overflow: auto;"
    >
      <h3
        style="margin: 0px 0px 12px; font-size: 14px;"
      >
        Event Log (last 10 events):
      </h3>
      <div
        style="font-size: 12px;"
      >
        No events yet. Hover or click on segments or legend items to see events.
      </div>
    </div>
  </div>
</div>
`;
